descriptive message here

--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,1 @@
-ErrorDocument 404 http://aws.computerstudi.es/~gc200396470/lab-two/
+ErrorDocument 404 http://aws.computerstudi.es/~gc200396470/lab-two/404.php
